fix(core): nve-progress-bar invisible space rendered on small overrides

--- a/projects/elements/src/progress-bar/progress-bar.css
+++ b/projects/elements/src/progress-bar/progress-bar.css
@@ -1,4 +1,5 @@
 :host {
+  display: flex;
   width: 100%;
   line-height: 0;
   --height: var(--nve-ref-size-200);
